# prometheus

./: .gitignore  .pre-commit-config.yaml  NOTICE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
configs/: aya_expanse_32b.toml  baichuan2_13b.toml  baichuan2_7b.toml  chatglm3_6b.toml  codestral_22b.toml  command_r_35b.toml  command_r_plus_104b_4bit.toml  dbrx_132b_4bit.toml  deepseek_r1_distill_14b.toml  deepseek_r1_distill_14b_4bit.toml  deepseek_r1_distill_32b.toml  deepseek_r1_distill_32b_4bit.toml  deepseek_r1_distill_7b.toml  deepseek_v2.5_4bit.toml  deepseek_v2_lite.toml  default.toml  devstral_24b.toml  exaone3.5_2.4b.toml  exaone3.5_32b.toml  exaone3.5_7.8b.toml  falcon2_11b.toml  falcon3_10b.toml  falcon3_1b.toml  falcon3_7b.toml  gemma2_27b.toml  gemma2_2b.toml  gemma2_9b.toml  gemma2_9b_fp8.toml  gemma3_12b.toml  gemma3_1b.toml  gemma3_27b.toml  gemma3_27b_4bit.toml  gemma3_4b.toml  glm4_9b.toml  glm4_flash.toml  gpt_oss_120b.toml  gpt_oss_20b.toml  granite3.1_3b_moe.toml  granite3.1_8b.toml  internlm2.5_20b.toml  (+95 more)
quick_start/: README.md  cleanup_hf_cache.sh  setup_remote.sh  write_env.sh
scripts/: README.md  ab_test.py  ab_test_v2.py  ab_test_v3.py  analyze_sweep.py  benchmark.py  benchmark_optimizations.py  discover_model.py  eval_model.py  generate_configs.py  generate_prompts.py  inspect_refusals.py  make_half_datasets.py  probe_harmful_model.py  push_model_card.py  quantize_fp8.py  run_abliterix.py  run_prometheus.py  run_sweep.py  test_trial.py  update_model_cards.py  upload_model.py
src/abliterix/: __init__.py  analysis.py  cli.py  cosmic.py  data.py  interactive.py  optimizer.py  scriptlib.py  settings.py  sra.py  svf.py  types.py  util.py  vectors.py  webui.py
src/abliterix/core/: engine.py  steering.py
src/abliterix/eval/: detector.py  scorer.py
src/prometheus/: __init__.py  analysis.py  cli.py  data.py  interactive.py  optimizer.py  scriptlib.py  settings.py  types.py  util.py  vectors.py
src/prometheus/core/: engine.py  steering.py
src/prometheus/eval/: detector.py  scorer.py
tests/: conftest.py  test_cli.py  test_data.py  test_detector.py  test_integration.py  test_scorer.py  test_scriptlib.py  test_settings.py  test_spherical.py  test_sra.py  test_steering.py  test_svf.py  test_types.py  test_util.py  test_vectors.py
